gcc/testsuite/rust/rustc/ui/const-generics/min_const_generics/feature-gate-min_const_generics.rs
fn test<const N: usize>() {}
// { dg-error ".E0658." "" { target *-*-* } .-1 }

fn main() {}

